Miglioramento commenti codice, refactoring
